tests/valid/test6.c
int i;
int j;

for (i = 0; i < 10; i = i + 1) {
    j = i * 2;
}
