tests/errors/multi_error_5.c
int i = 0;
while (i < 10)
{
    int j = i * 2
    i = i + 1;
// Missing brace

int x;
x = y + z; // Multiple undeclared
